# python

./: .clang-format  .envrc  .gitignore  README.md  find_so.py  pyproject.toml  setup.py
private/: manifest.json
python/: README.md  find_so.py  pyproject.toml  setup.py
python/src/ubeacon/extension/: commands.py  debuggee.py  download_python_headers.py  messages.py  startup.py  tui_windows.py  ubeacon.py  ui.py  watch.py
python/src/ubeacon/lib/: interact.c  trace.c  ubeacon.c  ubeacon.h
src/ubeacon/extension/: #commands.py#  commands.py  debuggee.py  startup.py  ubeacon.py
src/ubeacon/lib/: trace.c
ubeacon/: interact.c  trace.c  trace.h
ubeacon/udb_extension/: commands.py  debuggee.py  messages.py  startup.py  ubeacon.py  ui.py
